--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "json:server": "json-server --watch data.json",
     "postinstall": "ngcc --properties es2015 browser module main --first-only",
     "start": "ng serve",
     "build": "ng build --prod --aot --build-optimizer --common-chunk --vendor-chunk --optimization --progress",
@@ -35,6 +36,7 @@
     "@angular/core": "^11.2.5",
     "@angular/forms": "^11.2.5",
     "@angular/localize": "^11.2.5",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "^11.2.5",
     "@angular/platform-browser-dynamic": "^11.2.5",
     "@angular/router": "^11.2.5",
@@ -43,6 +45,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/icons-angular": "1.0.0-alpha.3",
+    "@swimlane/ngx-datatable": "^19.0.0",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "classlist.js": "^1.1.20150312",
@@ -70,6 +73,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "json-server": "^0.16.3",
     "karma": "~5.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
