add check voter ui

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ngx-perfect-scrollbar": "^10.1.0",
     "rxjs": "^6.6.6",
     "simple-line-icons": "^2.5.5",
+    "sweetalert2": "^11.0.16",
     "ts-helpers": "^1.1.2",
     "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
