--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/icons-angular": "1.0.0-alpha.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@swimlane/ngx-datatable": "^19.0.0",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
